Fix icons alignment issue

--- a/style.css
+++ b/style.css
@@ -12,23 +12,24 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template: 1fr 6fr / 1fr minmax(200px, 5fr);
+    grid-template: 1fr 6fr / minmax(200px, 1fr) 4fr;
     height: 100%;
-}
-
-header {
-
 }
 
 .nav_header {
     display: flex;
-    font-size: 1.5rem;
     font-weight: bold;
     gap: 0.1rem
 }
 
+.nav_header p {
+    font-size: 1.6rem;
+}
+
 .nav_header svg {
-    width: 48px;
+    /* TODO hacky fix to icon shrinking, not sure why?? */
+    min-width: 48px;
+    max-width: 48px;
     fill :#f8fafc;
 }
 
@@ -36,7 +37,7 @@ nav {
     color: #f8fafc;
     background-color: #0ea5e9;
     grid-row: 1 / -1;
-    padding: 0.4rem 1rem;
+    padding: 0.4rem 4rem 0 1rem;
 }
 
 
@@ -45,16 +46,16 @@ nav ul {
     display: grid;
     grid-template-columns: auto 1fr;
     list-style-type: none;
-    font-size: 1rem;
-    font-weight: bold;
+    font-size: 1.3rem;
     padding: 0;
     margin: 0;
-    gap: 10px 10px;
-    margin: 2rem 0.8rem 4rem 0;
+    gap: 10px 20px;
+    margin: 1rem 0 4rem 0.7rem;
+    align-items: center;
 }
 
 ul svg {
-    width: 18px;
+    width: 24px;
     fill :#f8fafc;
 }
 
